feat: add some screen print binds

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,6 +28,8 @@ exec-once = dunst # The notifications bar
 exec-once = waybar # The top bar
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
+exec-once = ~/.cargo/bin/wpaperd
+# custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
 exec-once = ~/.local/share/hyprload/hyprload.sh
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
@@ -175,9 +177,12 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, TAB, workspace, previous 
 # bind = $mainMod, SHIFT, TAB, workspace,previous
 #bind = $mainMod, TAB, changegroupactive,
-#bind = $mainMod, S, exec, grim -g "$(slurp)" - | grim -g $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') - | wl-copy
-bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
+#bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
+#- | grim -g $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') 
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - | wl-copy # take a screenshot
 #bind = $mainMod, Print, exec, grim $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') | wl-copy
+bind = $mainMod SHIFT, Print, exec, grim - | wl-copy # screenshot whole window(all monitors)
+bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused) | .name')" - | wl-copy
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy #cliphist binding
 bind = $mainMod, period, exec, bash ~/.local/scripts/wofi-emoji.sh #emoji selector
 bind = $mainMod, p, pin
@@ -203,7 +208,7 @@ bind = $mainMod, U, togglespecialworkspace, minimized
 
 # sets repeatable binds for resizing the active window
 binde = ALT, l, resizeactive, 10 0
-binde = ALT, h, resizeactive, -10 0
+#binde = ALT, h, resizeactive, -10 0
 binde = ALT, k, resizeactive, 0 -10
 binde = ALT, j, resizeactive, 0 10
 
