--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -177,10 +177,11 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, TAB, workspace, previous 
 # bind = $mainMod, SHIFT, TAB, workspace,previous
 #bind = $mainMod, TAB, changegroupactive,
-#bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
 #- | grim -g $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') 
-bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - | wl-copy # take a screenshot
-#bind = $mainMod, Print, exec, grim $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') | wl-copy
+#bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - | wl-copy # take a screenshot
+
+#bind = $mainMod, S, exec,grim -g "$(slurp)" - | grim '~/pictures/screenshots/'+$(date +'%s_grim.png')' - | wl-copy
 bind = $mainMod SHIFT, Print, exec, grim - | wl-copy # screenshot whole window(all monitors)
 bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused) | .name')" - | wl-copy
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy #cliphist binding
