feat: kitty tab keymaps

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,6 +8,14 @@ mouse_hide_wait  2.0
 cursor_shape     block
 url_color        #0087bd
 url_style        dotted
+background_opacity 0.95
 #Close the terminal without confirmation
 confirm_os_window_close 0
-background_opacity 0.95
+#maps
+map kitty_mod+enter launch --cwd=current #open new window in current directory
+map ctrl+alt+enter launch --cwd=current #also opens new window in current directory 
+map ctrl+t new_tab # launch new tab
+map ctrl+shift+t launch --cwd=current --type=tab #launch new tab in same directory
+
+
+
