--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,11 +11,10 @@ url_style        dotted
 background_opacity 0.95
 #Close the terminal without confirmation
 confirm_os_window_close 0
-#maps
-map kitty_mod+enter launch --cwd=current #open new window in current directory
-map ctrl+alt+enter launch --cwd=current #also opens new window in current directory 
-map ctrl+t new_tab # launch new tab
-map ctrl+shift+t launch --cwd=current --type=tab #launch new tab in same directory
+#---------------MAPS---------------------------------------------------------------------
+map kitty_mod+enter launch --cwd=current
+map kitty_mod+t     new_tab_with_cwd
+map ctrl+t launch --type=tab
 
 
 
