feat: change kitty theme

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ italic_font      auto
 bold_italic_font auto
 mouse_hide_wait  2.0
 cursor_shape     block
-url_color        #0087bd
+# url_color        #0087bd
 url_style        dotted
 background_opacity 0.95
 #Close the terminal without confirmation
@@ -18,3 +18,9 @@ map ctrl+t launch --type=tab
 
 
 
+
+
+# BEGIN_KITTY_THEME
+# Tango Dark
+include current-theme.conf
+# END_KITTY_THEME
