feat: add zsh, and clean plugins

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -12,9 +12,10 @@ background_opacity 0.95
 #Close the terminal without confirmation
 confirm_os_window_close 0
 #---------------MAPS---------------------------------------------------------------------
-map kitty_mod+enter launch --cwd=current
-map kitty_mod+t     new_tab_with_cwd
-map ctrl+t launch --type=tab
+#map kitty_mod+enter launch --cwd=current
+#map kitty_mod+t     new_tab_with_cwd
+#map ctrl+t launch --type=tab
+#map ctrl+tab focus_window
 
 
 
