--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ exec-once = nm-applet --indicator # Systray app for Network/Wifi
 exec-once = ~/.cargo/bin/wpaperd
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
-exec-once = ~/.local/share/hyprload/hyprload.sh
+#exec-once = ~/.local/share/hyprload/hyprload.sh
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = ~/.local/scripts/xdg.sh
@@ -123,15 +123,15 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
+# device:epic mouse V1 {
+#     sensitivity = -0.5
+# }
 
-plugin {
-    split-monitor-workspaces {
-        count = 5
-    }
-}
+# plugin {
+#     split-monitor-workspaces {
+#         count = 5
+#     }
+# }
 
 # Example windowrule v1
 #windowrule = float, ^(kitty)$
@@ -189,8 +189,8 @@ bind = $mainMod, period, exec, bash ~/.local/scripts/wofi-emoji.sh #emoji select
 bind = $mainMod, p, pin
 
 #hyprload binds
-bind=SUPERSHIFT,R,hyprload,reload
-bind=SUPERSHIFT,U,hyprload,update
+#bind=SUPERSHIFT,R,hyprload,reload
+#bind=SUPERSHIFT,U,hyprload,update
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
