--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 include ./mocha.conf
 font_family      jetbrains mono nerd font
-font_size        12
+font_size        10
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -12,11 +12,11 @@ background_opacity 0.95
 #Close the terminal without confirmation
 confirm_os_window_close 0
 #---------------MAPS---------------------------------------------------------------------
-#map kitty_mod+enter launch --cwd=current
-#map kitty_mod+t     new_tab_with_cwd
+map kitty_mod+enter launch --cwd=current
+map kitty_mod+t     new_tab_with_cwd
 #map ctrl+t launch --type=tab
 #map ctrl+tab focus_window
-
+map kitty_mod+z toggle_layout stack
 
 
 
