--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -36,6 +36,7 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = ~/.local/scripts/xdg.sh
 exec-once = ~/.local/scripts/alarmWhenLowMem.sh
+exec-once = ~/.local/scripts/launch-waybar.sh
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
