feat: hyperland changes

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,23 +1,13 @@
 # Setup monitors
 # See https://wiki.hyprland.org/Configuring/Monitors/
-#monitor=,preferred,auto,auto
 monitor=eDP-1,1920x1080@59.97700,0x0,1
 monitor=HDMI-A-1, 5464x3072@59.79000, 1920x0, 1
-#monitor=HDMI-A-1, 1024x768@60.00400, 1920x0, 1
-#monitor=DP-2, 1366x768@59.79000, 1920x0, 0.7
-#monitor = DP-2, modeline 1071.101 3840 3848 3880 3920 2160 2263 2271 2277 +hsync -vsync, 1920x0, 1
-
-
-
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1.25
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
+gestures {
+    workspace_swipe=true
+    workspace_swipe_fingers=3
+    workspace_swipe_distance=200
+    workspace_swipe_min_speed_to_force=5
+}
 # Execute your favorite apps at launch
 exec-once = systemctl --user restart xdg-desktop-portal.service
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct portal is running
@@ -37,8 +27,7 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = ~/.local/scripts/xdg.sh
 exec-once = ~/.local/scripts/alarmWhenLowMem.sh
 exec-once = ~/.local/scripts/launch-waybar.sh
-
-
+exec-once = ~/.local/state/wpaperd -d
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -47,6 +36,7 @@ input {
     kb_options =
     kb_rules =
 
+    kb_options = caps:swapescape
     follow_mouse = 1
 
     touchpad {
@@ -189,10 +179,6 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, period, exec, bash ~/.local/scripts/wofi-emoji.sh #emoji selector
 bind = $mainMod, p, pin
 
-#hyprload binds
-#bind=SUPERSHIFT,R,hyprload,reload
-#bind=SUPERSHIFT,U,hyprload,update
-
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -244,7 +230,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-
+#... and so on
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
