--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -179,6 +179,13 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, period, exec, bash ~/.local/scripts/wofi-emoji.sh #emoji selector
 bind = $mainMod, p, pin
 
+# Volume keys binds
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+binde = , xf86audioraisevolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+binde = , xf86audiolowervolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+# Brightness keys binds
+binde = , XF86MonBrightnessDown,exec,brightnessctl set 10%-
+binde = , XF86MonBrightnessUp,exec,brightnessctl set +10%
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
