feat: add screenshots copy utility

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -168,7 +168,10 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, TAB, workspace, previous 
 # bind = $mainMod, SHIFT, TAB, workspace,previous
 #bind = $mainMod, TAB, changegroupactive,
-bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
+#bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
+
+bind = $mainMod, S, exec, bash ~/.local/scripts/screenshots/captureArea.sh
+bind = $mainMod SHIFT, S, exec, bash ~/.local/scripts/screenshots/captureAll.sh
 #- | grim -g $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') 
 #bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - | wl-copy # take a screenshot
 
