change: keybinds for workspace movearound

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -165,7 +165,12 @@ bind = $mainMod, Y, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, wofi # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, TAB, workspace, previous 
+
+#navigate back and forth workspaces
+binde=SUPER,N,workspace,previous
+binde=SUPER_SHIFT,N,workspace,e-1
+bind = $mainMod, TAB, workspace, e+1 
+
 # bind = $mainMod, SHIFT, TAB, workspace,previous
 #bind = $mainMod, TAB, changegroupactive,
 #bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
@@ -200,9 +205,6 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-#navigate back and forth workspaces
-bind=SUPER,N,workspace,e+1
-bind=SUPER_SHIFT,N,workspace,e-1
 
 # Special workspaces workaround
 bind = $mainMod, H, movetoworkspace, special:minimized
