--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -213,7 +213,7 @@ bind = $mainMod, U, togglespecialworkspace, minimized
 
 # sets repeatable binds for resizing the active window
 binde = ALT, l, resizeactive, 10 0
-#binde = ALT, h, resizeactive, -10 0
+binde = ALT, h, resizeactive, -10 0
 binde = ALT, k, resizeactive, 0 -10
 binde = ALT, j, resizeactive, 0 10
 
