--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -3,9 +3,9 @@ setw -g mode-keys vi
 set-option -g default-shell "/bin/zsh"
 set-option -g default-command zsh
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# unbind C-b
+set-option -g prefix C-b
+bind-key C-b send-prefix
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
