--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 include ./mocha.conf
 font_family      jetbrains mono nerd font
-font_size        10
+font_size        9
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -9,6 +9,7 @@ cursor_shape     block
 # url_color        #0087bd
 url_style        dotted
 background_opacity 1.0
+dim_opacity 0.4
 #Close the terminal without confirmation
 confirm_os_window_close 0
 #---------------MAPS---------------------------------------------------------------------
@@ -23,5 +24,5 @@ map kitty_mod+z toggle_layout stack
 
 # BEGIN_KITTY_THEME
 # Tango Dark
-include current-theme.conf
+ include current-theme.conf
 # END_KITTY_THEME
