--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -76,11 +76,13 @@ decoration {
     }
 
     blurls = lockscreen
+    shadow{
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+      }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
