feat: remove unnecessary needed files

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,6 +19,7 @@ map kitty_mod+t     new_tab_with_cwd
 #map ctrl+tab focus_window
 map kitty_mod+z toggle_layout stack
 
+scrollback_lines 10000000000
 
 
 
