--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -1,5 +1,7 @@
 set -g mouse on
 setw -g mode-keys vi
+set -gq allow-passthrough on
+set -g visual-activity off
 set-option -g default-shell "/bin/zsh"
 set-option -g default-command zsh
 # remap prefix from 'C-b' to 'C-a'
@@ -12,7 +14,7 @@ bind - split-window -v
 unbind '"'
 unbind %
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.config/tmux/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
