--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = dunst # The notifications bar
 exec-once = waybar # The top bar
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
+exec-once = tmux source ~/.config/tmux/.tmux.conf
 exec-once = ~/.cargo/bin/wpaperd
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
