--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -14,7 +14,7 @@ bind - split-window -v
 unbind '"'
 unbind %
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/.tmux.conf
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -43,6 +43,7 @@ set -g pane-border-style 'fg=colour1'
 set -g pane-active-border-style 'fg=colour3'
 
 # statusbar
+
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'fg=colour1'
