feat: change waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,9 +22,9 @@ exec-once = tmux source ~/.config/tmux/.tmux.conf
 exec-once = ~/.cargo/bin/wpaperd
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Dracula"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
-
+exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 #exec-once = ~/.local/share/hyprload/hyprload.sh
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
