--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -12,13 +12,13 @@
     "cpu",
     "memory",
     "disk",
-    "hyprland/window"
+    "hyprland/window",
   ],
   "modules-center": [
     "custom/lock_screen",
     "custom/updates",
     "clock",
-    "custom/power_btn"
+    "custom/power_btn",
   ],
   "modules-right": [
     "backlight",
@@ -29,10 +29,12 @@
     "custom/light_dark",
     "temperature",
     "custom/power_profile",
-    "battery"
+    "battery",
   ],
   "hyprland/window": {
-    "format": "{}"
+    "rewrite": {
+      "(.*) - NVIM": "  $1",
+    },
   },
   "hyprland/workspaces": {
     "format": "{name}: {icon}",
@@ -44,38 +46,38 @@
       "५": "",
       "active": "",
       "default": "",
-      "empty": "∅"
+      "empty": "∅",
     },
     "persistent-workspaces": {
       "*": 3, // 5 workspaces by default on every monitor
-      "HDMI-A-1": 3 // but only three on HDMI-A-1
-    }
+      "HDMI-A-1": 3, // but only three on HDMI-A-1
+    },
   },
   "custom/launch_wofi": {
     "format": "",
     "on-click": "pkill wofi; wofi -n",
-    "tooltip": false
+    "tooltip": false,
   },
   "custom/lock_screen": {
     "format": "",
     "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
-    "tooltip": false
+    "tooltip": false,
   },
   "custom/light_dark": {
     "format": "󰐾",
     "on-click": "~/.config/waybar/scripts/baraction light",
-    "tooltip": false
+    "tooltip": false,
   },
   "custom/power_btn": {
     "format": "",
     "on-click": "sh -c '(sleep 0.5s; wlogout --protocol layer-shell)' & disown",
-    "tooltip": false
+    "tooltip": false,
   },
   "cpu": {
     "interval": 10,
     "format": " {usage}%",
     "max-length": 10,
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
   },
   "disk": {
     "interval": 30,
@@ -83,7 +85,7 @@
     "path": "/",
     "tooltip": true,
     "tooltip-format": "HDD - {used} used out of {total} on {path} ({percentage_used}%)",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
   },
   "memory": {
     "interval": 30,
@@ -91,14 +93,14 @@
     "max-length": 10,
     "tooltip": true,
     "tooltip-format": "Memory - {used:0.1f}GB used",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
   },
   "custom/updates": {
     "format": "{}",
     "exec": "~/.config/waybar/scripts/update-sys",
     "on-click": "~/.config/waybar/scripts/update-sys update",
     "interval": 300,
-    "tooltip": true
+    "tooltip": true,
   },
   "wlr/workspaces": {
     "disable-scroll": true,
@@ -114,8 +116,8 @@
       "7": [],
       "8": [],
       "9": [],
-      "10": []
-    }
+      "10": [],
+    },
   },
   "custom/power_profile": {
     //shows the current power profile and switches to next on click
@@ -123,7 +125,7 @@
     "interval": 30,
     "format": "󰈐{}",
     "on-click": "asusctl profile -n; pkill -SIGRTMIN+8 waybar",
-    "signal": 8
+    "signal": 8,
   },
   "custom/weather": {
     //shows the current weather and forecast
@@ -131,29 +133,25 @@
     "format": "{}",
     "interval": 30,
     "exec": "~/.config/waybar/scripts/waybar-wttr.py",
-    "return-type": "json"
+    "return-type": "json",
   },
   "tray": {
     "icon-size": 18,
-    "spacing": 10
+    "spacing": 10,
   },
   "clock": {
     "format": "{:%F %T}",
     "tooltip": true,
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "interval": 1
+    "interval": 1,
   },
   "backlight": {
     "device": "intel_backlight",
     "format": "{icon} {percent}%",
-    "format-icons": [
-      "󰃞",
-      "󰃟",
-      "󰃠"
-    ],
+    "format-icons": ["󰃞", "󰃟", "󰃠"],
     "on-scroll-up": "brightnessctl set 1%+",
     "on-scroll-down": "brightnessctl set 1%-",
-    "min-length": 6
+    "min-length": 6,
   },
   "pulseaudio": {
     "format": "{icon} {volume}%",
@@ -170,12 +168,8 @@
       "phone": "",
       "portable": "",
       "car": "",
-      "default": [
-        "",
-        "",
-        ""
-      ]
-    }
+      "default": ["", "", ""],
+    },
   },
   "pulseaudio#microphone": {
     "format": "{format_source}",
@@ -185,37 +179,25 @@
     "on-click-right": "pavucontrol",
     "on-scroll-up": "pamixer --default-source -i 5",
     "on-scroll-down": "pamixer --default-source -d 5",
-    "scroll-step": 5
+    "scroll-step": 5,
   },
   "temperature": {
     "thermal-zone": 1,
     "format": " {temperatureC}°C",
     "critical-threshold": 70,
     "format-critical": " {temperatureC}°C",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
   },
   "battery": {
     "states": {
       "good": 95,
       "warning": 30,
-      "critical": 20
+      "critical": 20,
     },
     "format": "{icon} {capacity}%",
     "format-charging": " {capacity}%",
     "format-plugged": " {capacity}%",
     "format-alt": "{time} {icon}",
-    "format-icons": [
-      "󰂎",
-      "󰁺",
-      "󰁻",
-      "󰁼",
-      "󰁽",
-      "󰁾",
-      "󰁿",
-      "󰂀",
-      "󰂁",
-      "󰂂",
-      "󰁹"
-    ]
-  }
+    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+  },
 }
