--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -133,11 +133,11 @@ gestures {
 
 # Example windowrule v1
 #windowrule = float, ^(kitty)$
-windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-windowrule = float,^(chromium)$
-windowrule = float,^(thunar)$
+windowrule = float,title:(^(pavucontrol)$)
+windowrule = float,title:^(blueman-manager)$)
+windowrule = float,title:(^(nm-connection-editor)$)
+windowrule = float,title:(^(chromium)$)
+windowrule = float,title:(^(thunar)$)
 windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
 windowrule=size 840X640,title:File Upload
