--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
 exec-once = tmux source ~/.config/tmux/.tmux.conf
 exec-once = ~/.cargo/bin/wpaperd
+exec-once = hyprpaper
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
 exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK3 apps
@@ -29,10 +30,12 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 #exec-once = ~/.local/share/hyprload/hyprload.sh
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = ~/.local/scripts/xdg.sh
 exec-once = ~/.local/scripts/alarmWhenLowMem.sh
 exec-once = ~/.local/scripts/launch-waybar.sh
 exec-once = ~/.local/state/wpaperd -d
+exec-once = ~/.local/scripts/randomize-wallpaper.sh
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -191,6 +194,7 @@ bind = $mainMod SHIFT, S, exec, bash ~/.local/scripts/screenshots/captureAll.sh
 bind = $mainMod SHIFT, Print, exec, grim - | wl-copy # screenshot whole window(all monitors)
 bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused) | .name')" - | wl-copy
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy #cliphist binding
+#bind = $mainMod, V, exec, clipman pick -t wofi
 bind = $mainMod, period, exec, bash ~/.local/scripts/wofi-emoji.sh #emoji selector
 bind = $mainMod, p, pin
 
