--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,6 +17,8 @@ map kitty_mod+enter launch --cwd=current
 map kitty_mod+t     new_tab_with_cwd
 #map ctrl+t launch --type=tab
 #map ctrl+tab focus_window
+map ctrl+alt+\ launch --location=vsplit
+map ctrl+alt+- launch --location=hsplit
 map kitty_mod+z toggle_layout stack
 
 scrollback_lines 10000000000
