feat: change active border color

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,9 +61,11 @@ general {
     gaps_out = 10
     border_size = 2
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border=rgb(cdd6f4)
-    col.inactive_border = rgba(595959aa)
-
+    col.active_border = rgba(ff2a2aff) rgba(8000ffcc) 60deg
+    #col.active_border=rgb(cdd6f4)
+    #col.inactive_border = rgba(595959aa)
+    # col.active_border = rgba(ff0000ff)     # Red active border
+    # col.inactive_border = rgba(444444aa)   # Semi-transparent gray for inactive
     layout = dwindle
 }
 
