feat: dynamic borders feature

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = nm-applet --indicator # Systray app for Network/Wifi
 exec-once = tmux source ~/.config/tmux/.tmux.conf
 exec-once = ~/.cargo/bin/wpaperd
 exec-once = hyprpaper
+exec-once = hyprsunset
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
 exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK3 apps
@@ -36,6 +37,7 @@ exec-once = ~/.local/scripts/alarmWhenLowMem.sh
 exec-once = ~/.local/scripts/launch-waybar.sh
 exec-once = ~/.local/state/wpaperd -d
 exec-once = ~/.local/scripts/randomize-wallpaper.sh
+exec-once = ~/.local/scripts/dynamic-borders.sh
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -60,8 +62,8 @@ general {
     gaps_in = 2
     gaps_out = 0
     border_size = 2
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border = rgba(ff2a2aff) rgba(8000ffcc) 60deg
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    #col.active_border = rgba(ff2a2aff) rgba(8000ffcc) 60deg
     no_border_on_floating = true
     #no_border_on_single = true
     #col.active_border=rgb(cdd6f4)
