fix: remove script which killed waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = wl-paste -t text --watch clipman store --no-persist
 exec-once = ~/.local/scripts/xdg.sh
 exec-once = ~/.local/scripts/alarmWhenLowMem.sh
-exec-once = ~/.local/scripts/launch-waybar.sh
+#exec-once = ~/.local/scripts/launch-waybar.sh
 exec-once = ~/.local/state/wpaperd -d
 exec-once = ~/.local/scripts/randomize-wallpaper.sh
 exec-once = ~/.local/scripts/dynamic-borders.sh
