feat: scripts for scrolling temperatures

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -157,12 +157,14 @@
   //   "interval": 10,
   // },
   "custom/hyprsunset": {
-    "format": "🕶",
-    // "on-scroll-up": "hyprctl hyprsunset gamma +10",
-    // "on-scroll-down": "hyprctl hyprsunset gamma -10",
-    "on-click": "~/.local/scripts/hyprsunset_toggle.sh",
+    "format": "{}",
     "tooltip": false,
-    "interval": 3600,
+    "interval": 2,
+    "on-scroll-up": "~/.local/scripts/hyprsunset_temp.sh up",
+    "on-scroll-down": "~/.local/scripts/hyprsunset_temp.sh down",
+    "on-click": "~/.local/scripts/hyprsunset_toggle.sh",
+    "exec": "~/.local/scripts/hyprsunset_status.sh",
+    "reload-on-click": true,
   },
   "backlight": {
     "device": "intel_backlight",
