feat: change binds

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -8,34 +8,29 @@ bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, ESC, exec, swaylock # Lock the screen
 bind = $mainMod, DEL, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, ESC, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, F, exec, thunar # Show the graphical file browser
+bind = $mainMod, F, exec,hunar # Show the graphical file browser
 bind = $mainMod, B, exec, thorium-browser # Open default browser
 bind = $mainMod, Y, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, wofi # Show the graphical app launcher
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, p, pseudo
 bind = $mainMod, J, togglesplit, # dwindle
 
-#navigate back and forth workspaces
+# Navigate back and forth workspaces
 binde=SUPER,N,workspace,previous
 binde=SUPER_SHIFT,N,workspace,e-1
 bind = $mainMod, TAB, workspace, e+1 
 
-# bind = $mainMod, SHIFT, TAB, workspace,previous
-#bind = $mainMod, TAB, changegroupactive,
-#bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy
-
+# Screenshots
 bind = $mainMod, S, exec, bash ~/.local/scripts/screenshots/captureArea.sh
 bind = $mainMod SHIFT, S, exec, bash ~/.local/scripts/screenshots/captureAll.sh
-#- | grim -g $(xdg-user-dir pictures/screenshots/)/$(date +'%s_grim.png') 
-#bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - | wl-copy # take a screenshot
-
-#bind = $mainMod, S, exec,grim -g "$(slurp)" - | grim '~/pictures/screenshots/'+$(date +'%s_grim.png')' - | wl-copy
 bind = $mainMod SHIFT, Print, exec, grim - | wl-copy # screenshot whole window(all monitors)
 bind = $mainMod, Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused) | .name')" - | wl-copy
+
+# Wofi 
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy #cliphist binding
 #bind = $mainMod, V, exec, clipman pick -t wofi
+#bind = $mainMod, V, exec, kitty --class clipse -e clipse
 bind = $mainMod, period, exec, bash ~/.local/scripts/wofi-emoji.sh #emoji selector
-bind = $mainMod, p, pin
 
 # Volume keys
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
@@ -58,7 +53,7 @@ bind = $mainMod, down, movefocus, d
 
 # Special workspaces workaround
 bind = $mainMod, H, movetoworkspace, special:minimized
-bind = SHIFT, TAB, movetoworkspace, +0
+bind = $mainMod SHIFT, U, movetoworkspace, +0
 bind = $mainMod, U, togglespecialworkspace, minimized
 
 # sets repeatable binds for resizing the active window
