--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct p
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Wayland magic (screen sharing etc.)
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # More wayland magic (screen sharing etc.)
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for user sudo graphical elevation
-exec-once = dunst # The notifications bar
+exec-once = swaync # The notifications bar
 exec-once = waybar # The top bar
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
@@ -31,13 +31,17 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 #exec-once = ~/.local/share/hyprload/hyprload.sh
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-exec-once = wl-paste -t text --watch clipman store --no-persist
-exec-once = ~/.local/scripts/xdg.sh
+#exec-once = wl-paste -t text --watch clipman store --no-persist
+#exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
+#exec-once = copyq --start-server
+#exec-once = wl-clip-persist --clipboard regular
+#exec-once = clipse -listen
+#exec-once = ~/.local/scripts/xdg.sh
 exec-once = ~/.local/scripts/alarmWhenLowMem.sh
 #exec-once = ~/.local/scripts/launch-waybar.sh
 exec-once = ~/.local/state/wpaperd -d
 exec-once = ~/.local/scripts/randomize-wallpaper.sh
-exec-once = ~/.local/scripts/dynamic-borders.sh
+#exec-once = ~/.local/scripts/dynamic-borders.sh
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -62,11 +66,11 @@ general {
     gaps_in = 2
     gaps_out = 0
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     #col.active_border = rgba(ff2a2aff) rgba(8000ffcc) 60deg
-    no_border_on_floating = true
+    #no_border_on_floating = true
     #no_border_on_single = true
-    #col.active_border=rgb(cdd6f4)
+    col.active_border=rgb(8a898d)
     #col.inactive_border = rgba(595959aa)
     # col.active_border = rgba(ff0000ff)     # Red active border
     # col.inactive_border = rgba(444444aa)   # Semi-transparent gray for inactive
