--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g visual-activity off
 set-option -g default-shell "/bin/zsh"
 set-option -g default-command zsh
 set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
 # remap prefix from 'C-b' to 'C-a'
 # unbind C-b
 set-option -g prefix C-b
