--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -35,6 +35,9 @@
   "hyprland/window": {
     "rewrite": {
       "(.*) - NVIM": "  $1",
+      "(.*) - Visual Studio Code": "󰨞  $1",
+      "(.*) - Mozilla Firefox": "  $1",
+      "foot": "", // Windows that contain "foot" in either class or title. For optimization reasons, it will only match against a title if at least one other window explicitly matches against a title.
     },
   },
   "hyprland/workspaces": {
@@ -49,6 +52,16 @@
       "default": "",
       "empty": "∅",
     },
+    // "format": "<sub>{icon}</sub>\n{windows}",
+    // "format-window-separator": "\t",
+    // "window-rewrite-default": "",
+    // "window-rewrite": {
+    //   "title<.*youtube.*>": "", // Windows whose titles contain "youtube"
+    //   "class<firefox>": "", // Windows whose classes are "firefox"
+    //   "class<firefox> title<.*github.*>": "", // Windows whose class is "firefox" and title contains "github". Note that "class" always comes first.
+    //   "foot": "", // Windows that contain "foot" in either class or title. For optimization reasons, it will only match against a title if at least one other window explicitly matches against a title.
+    //   "code": "󰨞",
+    // },
     "persistent-workspaces": {
       "*": 3, // 5 workspaces by default on every monitor
       "HDMI-A-1": 3, // but only three on HDMI-A-1
@@ -146,20 +159,9 @@
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     "interval": 1,
   },
-  // "custom/hyprsunset": {
-  //   "format": "hello",
-  //   "exec": "systemctl --user enable --now hyprsunset.service",
-  //   "on-scroll-up": "hyprctl hyprsunset gamma +10",
-  //   "on-scroll-down": "hyprctl hyprsunset gamma -10",
-  //   "on-click": "hyprctl hyprsunset identity",
-  //   "on-click-right": "hyprctl hyprsunset gamma 50",
-  //   "format-icons": ["🕶️", "👓"],
-  //   "interval": 10,
-  // },
   "custom/hyprsunset": {
     "format": "{}",
     "tooltip": false,
-    "interval": 2,
     "on-scroll-up": "~/.local/scripts/hyprsunset_temp.sh up",
     "on-scroll-down": "~/.local/scripts/hyprsunset_temp.sh down",
     "on-click": "~/.local/scripts/hyprsunset_toggle.sh",
