feat: add new notification daemon

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -12,13 +12,13 @@
     "cpu",
     "memory",
     "disk",
-    "hyprland/window",
+    "hyprland/window"
   ],
   "modules-center": [
     "custom/lock_screen",
     "custom/updates",
     "clock",
-    "custom/power_btn",
+    "custom/power_btn"
   ],
   "modules-right": [
     "custom/hyprsunset",
@@ -27,18 +27,19 @@
     "pulseaudio#microphone",
     "tray",
     "custom/weather",
+    "custom/notification",
     "custom/light_dark",
     "temperature",
     "custom/power_profile",
-    "battery",
+    "battery"
   ],
   "hyprland/window": {
     "rewrite": {
       "(.*) - NVIM": "  $1",
       "(.*) - Visual Studio Code": "󰨞  $1",
       "(.*) - Mozilla Firefox": "  $1",
-      "foot": "", // Windows that contain "foot" in either class or title. For optimization reasons, it will only match against a title if at least one other window explicitly matches against a title.
-    },
+      "foot": "" // Windows that contain "foot" in either class or title. For optimization reasons, it will only match against a title if at least one other window explicitly matches against a title.
+    }
   },
   "hyprland/workspaces": {
     "format": "{name}: {icon}",
@@ -50,7 +51,7 @@
       "५": "",
       "active": "",
       "default": "",
-      "empty": "∅",
+      "empty": "∅"
     },
     // "format": "<sub>{icon}</sub>\n{windows}",
     // "format-window-separator": "\t",
@@ -64,34 +65,34 @@
     // },
     "persistent-workspaces": {
       "*": 3, // 5 workspaces by default on every monitor
-      "HDMI-A-1": 3, // but only three on HDMI-A-1
-    },
+      "HDMI-A-1": 3 // but only three on HDMI-A-1
+    }
   },
   "custom/launch_wofi": {
     "format": "",
     "on-click": "pkill wofi; wofi -n",
-    "tooltip": false,
+    "tooltip": false
   },
   "custom/lock_screen": {
     "format": "",
     "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
-    "tooltip": false,
+    "tooltip": false
   },
   "custom/light_dark": {
     "format": "󰐾",
     "on-click": "~/.config/waybar/scripts/baraction light",
-    "tooltip": false,
+    "tooltip": false
   },
   "custom/power_btn": {
     "format": "",
     "on-click": "sh -c '(sleep 0.5s; wlogout --protocol layer-shell)' & disown",
-    "tooltip": false,
+    "tooltip": false
   },
   "cpu": {
     "interval": 10,
     "format": " {usage}%",
     "max-length": 10,
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
   },
   "disk": {
     "interval": 30,
@@ -99,7 +100,7 @@
     "path": "/",
     "tooltip": true,
     "tooltip-format": "HDD - {used} used out of {total} on {path} ({percentage_used}%)",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
   },
   "memory": {
     "interval": 30,
@@ -107,14 +108,14 @@
     "max-length": 10,
     "tooltip": true,
     "tooltip-format": "Memory - {used:0.1f}GB used",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
   },
   "custom/updates": {
     "format": "{}",
     "exec": "~/.config/waybar/scripts/update-sys",
     "on-click": "~/.config/waybar/scripts/update-sys update",
     "interval": 300,
-    "tooltip": true,
+    "tooltip": true
   },
   "wlr/workspaces": {
     "disable-scroll": true,
@@ -130,8 +131,8 @@
       "7": [],
       "8": [],
       "9": [],
-      "10": [],
-    },
+      "10": []
+    }
   },
   "custom/power_profile": {
     //shows the current power profile and switches to next on click
@@ -139,7 +140,7 @@
     "interval": 30,
     "format": "󰈐{}",
     "on-click": "asusctl profile -n; pkill -SIGRTMIN+8 waybar",
-    "signal": 8,
+    "signal": 8
   },
   "custom/weather": {
     //shows the current weather and forecast
@@ -147,17 +148,17 @@
     "format": "{}",
     "interval": 30,
     "exec": "~/.config/waybar/scripts/waybar-wttr.py",
-    "return-type": "json",
+    "return-type": "json"
   },
   "tray": {
     "icon-size": 18,
-    "spacing": 10,
+    "spacing": 10
   },
   "clock": {
     "format": "{:%F %T}",
     "tooltip": true,
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "interval": 1,
+    "interval": 1
   },
   "custom/hyprsunset": {
     "format": "{}",
@@ -166,7 +167,7 @@
     "on-scroll-down": "~/.local/scripts/hyprsunset_temp.sh down",
     "on-click": "~/.local/scripts/hyprsunset_toggle.sh",
     "exec": "~/.local/scripts/hyprsunset_status.sh",
-    "reload-on-click": true,
+    "reload-on-click": true
   },
   "backlight": {
     "device": "intel_backlight",
@@ -174,7 +175,7 @@
     "format-icons": ["󰃞", "󰃟", "󰃠"],
     "on-scroll-up": "brightnessctl set 1%+",
     "on-scroll-down": "brightnessctl set 1%-",
-    "min-length": 6,
+    "min-length": 6
   },
   "pulseaudio": {
     "format": "{icon} {volume}%",
@@ -191,8 +192,8 @@
       "phone": "",
       "portable": "",
       "car": "",
-      "default": ["", "", ""],
-    },
+      "default": ["", "", ""]
+    }
   },
   "pulseaudio#microphone": {
     "format": "{format_source}",
@@ -202,25 +203,45 @@
     "on-click-right": "pavucontrol",
     "on-scroll-up": "pamixer --default-source -i 5",
     "on-scroll-down": "pamixer --default-source -d 5",
-    "scroll-step": 5,
+    "scroll-step": 5
   },
   "temperature": {
     "thermal-zone": 1,
     "format": " {temperatureC}°C",
     "critical-threshold": 70,
     "format-critical": " {temperatureC}°C",
-    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'",
+    "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
   },
   "battery": {
     "states": {
       "good": 95,
       "warning": 30,
-      "critical": 20,
+      "critical": 20
     },
     "format": "{icon} {capacity}%",
     "format-charging": " {capacity}%",
     "format-plugged": " {capacity}%",
     "format-alt": "{time} {icon}",
-    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
   },
+  "custom/notification": {
+    "tooltip": false,
+    "format": " {icon} ",
+    "format-icons": {
+      "notification": "<span foreground='red'><sup></sup></span>",
+      "none": "",
+      "dnd-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-none": "",
+      "inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      "inhibited-none": "",
+      "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-inhibited-none": ""
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
+  }
 }
