--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -8,7 +8,7 @@ bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, ESC, exec, swaylock # Lock the screen
 bind = $mainMod, DEL, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, ESC, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, F, exec,hunar # Show the graphical file browser
+bind = $mainMod, F, exec,thunar # Show the graphical file browser
 bind = $mainMod, B, exec, thorium-browser # Open default browser
 bind = $mainMod, Y, togglefloating, # Allow a window to float
 bind = $mainMod, SPACE, exec, wofi # Show the graphical app launcher
