feat: add ipc off

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
 preload = /home/missic/Pictures/wallpaper/1i918gwz1gl61.png
 wallpaper = , /home/missic/Pictures/wallpaper/672ye1wud3r51.png
+ipc=off
