--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,5 +169,6 @@ windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = animation slide,class:^(wofi)$
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
 
-# All Keyboard binds
+# Extra configs
  source = ~/.config/hypr/binds.conf
+ source = ~/.config/hypr/plugins.conf
