--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,48 +1,13 @@
-# Setup monitors
+# +------------------------------------------+
+# |                 Monitors                 |
+# +------------------------------------------+
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1080@59.97700,0x0,1
 monitor=HDMI-A-1, 5464x3072@59.79000, 1920x0, 1
-gestures {
-    workspace_swipe=true
-    workspace_swipe_fingers=3
-    workspace_swipe_distance=200
-    workspace_swipe_min_speed_to_force=5
-}
-# Execute your favorite apps at launch
-exec-once = systemctl --user restart xdg-desktop-portal.service
-exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct portal is running
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Wayland magic (screen sharing etc.)
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # More wayland magic (screen sharing etc.)
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for user sudo graphical elevation
-exec-once = swaync # The notifications bar
-exec-once = waybar # The top bar
-exec-once = blueman-applet # Systray app for BT
-exec-once = nm-applet --indicator # Systray app for Network/Wifi
-exec-once = tmux source ~/.config/tmux/.tmux.conf
-exec-once = ~/.cargo/bin/wpaperd
-exec-once = hyprpaper
-exec-once = hyprsunset
-# custom scripts
-exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK3 apps
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
-exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
-env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
-#exec-once = ~/.local/share/hyprload/hyprload.sh
-exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-exec-once = wl-paste --type image --watch cliphist store #Stores only image data
-#exec-once = wl-paste -t text --watch clipman store --no-persist
-#exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
-#exec-once = copyq --start-server
-#exec-once = wl-clip-persist --clipboard regular
-#exec-once = clipse -listen
-#exec-once = ~/.local/scripts/xdg.sh
-exec-once = ~/.local/scripts/alarmWhenLowMem.sh
-#exec-once = ~/.local/scripts/launch-waybar.sh
-exec-once = ~/.local/state/wpaperd -d
-exec-once = ~/.local/scripts/randomize-wallpaper.sh
-#exec-once = ~/.local/scripts/dynamic-borders.sh
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+
+# +------------------------------------------+
+# |                 Hardwares                |
+# +------------------------------------------+
 input {
     kb_layout = us
     kb_variant =
@@ -60,9 +25,59 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# +------------------------------------------+
+# |                 Gestures                |
+# +------------------------------------------+
+gestures {
+    workspace_swipe=true
+    workspace_swipe_fingers=3
+    workspace_swipe_distance=200
+    workspace_swipe_min_speed_to_force=5
+}
 
+# +------------------------------------------+
+# |       Start scripts at launch time       |
+# +------------------------------------------+
+exec-once = systemctl --user restart xdg-desktop-portal.service
+exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct portal is running
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Wayland magic (screen sharing etc.)
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # More wayland magic (screen sharing etc.)
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for user sudo graphical elevation
+exec-once = swaync # The notifications bar
+exec-once = waybar # The top bar
+exec-once = blueman-applet # Systray app for BT
+exec-once = nm-applet --indicator # Systray app for Network/Wifi
+exec-once = tmux source ~/.config/tmux/.tmux.conf
+exec-once = ~/.cargo/bin/wpaperd
+exec-once = hyprpaper
+exec-once = hyprsunset
+#_____________________________________________#
+# custom scripts
+exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
+#exec-once = ~/.local/share/hyprload/hyprload.sh
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+#exec-once = wl-paste -t text --watch clipman store --no-persist
+#exec-once = wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
+#exec-once = copyq --start-server
+#exec-once = wl-clip-persist --clipboard regular
+#exec-once = clipse -listen
+#exec-once = ~/.local/scripts/xdg.sh
+exec-once = ~/.local/scripts/alarmWhenLowMem.sh
+#exec-once = ~/.local/scripts/launch-waybar.sh
+exec-once = ~/.local/state/wpaperd -d
+exec-once = ~/.local/scripts/randomize-wallpaper.sh
+#exec-once = ~/.local/scripts/dynamic-borders.sh
+# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+
+
+# +------------------------------------------+
+# |              Styling                     |
+# +------------------------------------------+
+general {
     gaps_in = 2
     gaps_out = 0
     border_size = 2
@@ -76,11 +91,11 @@ general {
     # col.inactive_border = rgba(444444aa)   # Semi-transparent gray for inactive
     layout = dwindle
 }
-
+#_____________________________________________#
 misc {
     disable_hyprland_logo = yes
 }
-
+#_____________________________________________#
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -102,6 +117,8 @@ decoration {
       }
 
 }
+
+#_____________________________________________#
 
 animations {
     enabled = yes
@@ -127,25 +144,10 @@ master {
     new_status = master
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
-}
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-# device:epic mouse V1 {
-#     sensitivity = -0.5
-# }
-
-# plugin {
-#     split-monitor-workspaces {
-#         count = 5
-#     }
-# }
-
-# Example windowrule v1
-#windowrule = float, ^(kitty)$
+# +------------------------------------------+
+# |        Window Rules V1                   |
+# +------------------------------------------+
 windowrule = float,title:(^(pavucontrol)$)
 windowrule = float,title:^(blueman-manager)$)
 windowrule = float,title:(^(nm-connection-editor)$)
@@ -156,8 +158,10 @@ windowrule = float, title:^(update-sys)$
 windowrule=size 840X640,title:File Upload
 windowrule=center,title:File Upload 
 
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+# +------------------------------------------+
+# |        Window Rules V2                   |
+# +------------------------------------------+
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # rules below would make the specific app transparent
 windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
@@ -169,6 +173,24 @@ windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = animation slide,class:^(wofi)$
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
 
-# Extra configs
+
+# +------------------------------------------+
+# |        Environment variables             |
+# +------------------------------------------+
+env = XCURSOR_SIZE,24
+env = GDK_BACKEND,wayland,x11
+env = QT_QPA_PLATFORM,wayland;xcb
+env = CLUTTER_BACKEND,wayland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
+
+
+# +------------------------------------------+
+# |             Extra Configs                |
+# +------------------------------------------+
  source = ~/.config/hypr/binds.conf
  source = ~/.config/hypr/plugins.conf
