feat: change active border color in hypr

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -81,11 +81,11 @@ general {
     gaps_in = 2
     gaps_out = 0
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+  #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     #col.active_border = rgba(ff2a2aff) rgba(8000ffcc) 60deg
     #no_border_on_floating = true
     #no_border_on_single = true
-  #col.active_border=rgb(f274f9)
+  col.active_border=rgb(c67cca)
     #col.inactive_border = rgba(595959aa)
     # col.active_border = rgba(ff0000ff)     # Red active border
     # col.inactive_border = rgba(444444aa)   # Semi-transparent gray for inactive
