feat: add dynamic cursors and hyprpicker

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -104,3 +104,5 @@ bindm = $mainMod, mouse:273, resizewindow
 # Keys binds for function keys
 #bind = XF86AudioMute, exec, 
 
+# Hyprpicker
+bind = $mainMod SHIFT, P, exec, hyprpicker | wl-copy
