--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,6 +51,7 @@ exec-once = tmux source ~/.config/tmux/.tmux.conf
 exec-once = ~/.cargo/bin/wpaperd
 exec-once = hyprpaper
 exec-once = hyprsunset
+exec-once = hypridle
 #_____________________________________________#
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
