--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -43,6 +43,7 @@
       "Rakuten Viber": "   Viber",
       "foot": "", // Windows that contain "foot" in either class or title. For optimization reasons, it will only match against a title if at least one other window explicitly matches against a title.
     },
+    "separate-outputs": true,
   },
   "hyprland/workspaces": {
     "format": "{name}: {icon}",
