feat: add custom binds

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -106,3 +106,9 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Hyprpicker
 bind = $mainMod SHIFT, P, exec, hyprpicker | wl-copy
+
+# Custom binds
+bind = $mainMod , g, exec, xdg-open https://github.com/missic17
+bind = $mainMod , i, exec, xdg-open https://instagram.com
+bind = $mainMod , c, exec, xdg-open https://chat.com
+
