feat: add hover calendar, min value to brightness

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,6 +52,7 @@ exec-once = ~/.cargo/bin/wpaperd
 exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = hypridle
+exec-once = hyprpm reload
 #_____________________________________________#
 # custom scripts
 exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
@@ -156,8 +157,8 @@ windowrule = float,title:(^(chromium)$)
 windowrule = float,title:(^(thunar)$)
 windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
-windowrule=size 840X640,title:File Upload
-windowrule=center,title:File Upload 
+windowrule = size 840X640,title:File Upload
+windowrule = center,title:File Upload 
 
 
 # +------------------------------------------+
