--- a/.config/hypr/plugins.conf
+++ b/.config/hypr/plugins.conf
@@ -59,7 +59,7 @@ plugin:dynamic-cursors {
     # this is a keyword and can be repeated many times
     # by default, there are no rules added
     # see the dedicated `shape rules` section below!
-  # apply a 90° offset in rotate mode to the text shape
+  # apply a 90° offset in rotate mode to the text shape  # 
     shaperule = text, rotate:offset: 90
 
     # use stretch mode when grabbing, and set the limit low
