--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -15,13 +15,9 @@
     "disk",
     "hyprland/window",
   ],
-  "modules-center": [
-    "custom/lock_screen",
-    "custom/updates",
-    "clock",
-    "custom/power_btn",
-  ],
+  "modules-center": ["clock", "custom/lock_screen", "custom/power_btn"],
   "modules-right": [
+    "custom/updates",
     "custom/hyprsunset",
     "backlight",
     "pulseaudio",
@@ -159,10 +155,35 @@
     "spacing": 10,
   },
   "clock": {
-    "format": "{:%F %T}",
-    "tooltip": true,
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     "interval": 1,
+    "timezone": "Asia/Kathmandu",
+    "tooltip": true,
+    "format": " {:%F  %T}",
+    "format-alt": " {:%b %d}",
+    "tooltip-format": "<span size='larger' color='#ffffff'>{:%Y %B}</span>\n<tt><span size='smaller'>{calendar}</span></tt>",
+    "today-format": "<span color='#ffffff'><b><i>{}</i></b></span>",
+    "format-calendar": "<span color='#aaaaaa'>{}</span>",
+    "format-calendar-weekdays": "<span color='#dddddd'>{}</span>",
+    "calendar": {
+      "mode": "year",
+      "mode-mon-col": 3,
+      "weeks-pos": "right",
+      "on-scroll": 1,
+      "format": {
+        "months": "<span color='#ffead3'><b>{}</b></span>",
+        "days": "<span color='#ecc6d9'><b>{}</b></span>",
+        "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b><u>{}</u></b></span>",
+      },
+    },
+    "actions": {
+      "on-click-right": "mode",
+      "on-scroll-up": "tz_up",
+      "on-scroll-down": "tz_down",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down",
+    },
   },
   "custom/hyprsunset": {
     "format": "{}",
@@ -178,7 +199,7 @@
     "format": "{icon} {percent}%",
     "format-icons": ["󰃞", "󰃟", "󰃠"],
     "on-scroll-up": "brightnessctl set 1%+",
-    "on-scroll-down": "brightnessctl set 1%-",
+    "on-scroll-down": "brightnessctl set 1%- --min-value=900",
     "min-length": 6,
   },
   "pulseaudio": {
