feat: scripts for randomized wallpaper wip

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,4 @@
-preload = /home/missic/Pictures/wallpaper/1i918gwz1gl61.png
-wallpaper = , /home/missic/Pictures/wallpaper/672ye1wud3r51.png
-ipc=off
+preload = ~/.config/hypr/wallpapers/10.jpg
+wallpaper = ,contain:/home/missic/.config/hypr/wallpapers/10.jpg
+ipc = off
+splash = false
