--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,12 @@
+preload = ~/.config/hypr/wallpapers/1.jpg
+preload = ~/.config/hypr/wallpapers/2.png
+preload = ~/.config/hypr/wallpapers/2.png
+preload = ~/.config/hypr/wallpapers/2.png
+preload = ~/.config/hypr/wallpapers/6.png
+preload = ~/.config/hypr/wallpapers/7.webp
+preload = ~/.config/hypr/wallpapers/8.png
+preload = ~/.config/hypr/wallpapers/9.jpg
 preload = ~/.config/hypr/wallpapers/10.jpg
-wallpaper = ,contain:/home/missic/.config/hypr/wallpapers/10.jpg
+wallpaper = ,contain:/home/missic/.config/hypr/wallpapers/2.png
 ipc = off
 splash = false
