feat: thunar and xdg-desktop-portal-gtk float and center

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -158,7 +158,7 @@ windowrule = float,title:(^(pavucontrol)$)
 windowrule = float,title:^(blueman-manager)$)
 windowrule = float,title:(^(nm-connection-editor)$)
 windowrule = float,title:(^(chromium)$)
-windowrule = float,title:(^(thunar)$)
+windowrule = float,class:^(thunar)$
 windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
 windowrule = size 840X640,title:File Upload
@@ -174,10 +174,15 @@ windowrulev2 = opacity 0.9 0.8,class:^(kitty)$
 windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
 windowrulev2 = animation popin,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
+windowrulev2 = size 50% 50%,class:^(thunar)$
+windowrulev2 = center,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = animation slide,class:^(wofi)$
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = size 50% 50%,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = center,class:^(xdg-desktop-portal-gtk)$
 
 # +------------------------------------------+
 # |        Environment variables             |
