feat: flot for file picker

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -154,8 +154,6 @@ master {
 # +------------------------------------------+
 # |        Window Rules V1                   |
 # +------------------------------------------+
-windowrule = float,title:(^(pavucontrol)$)
-windowrule = float,title:^(blueman-manager)$)
 windowrule = float,title:(^(nm-connection-editor)$)
 windowrule = float,title:(^(chromium)$)
 windowrule = float,class:^(thunar)$
@@ -178,12 +176,17 @@ windowrulev2 = size 50% 50%,class:^(thunar)$
 windowrulev2 = center,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = animation slide,class:^(wofi)$
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = size 50% 50%,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = center,class:^(xdg-desktop-portal-gtk)$
-
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = float,title:(^(Bitwarden))$
+windowrulev2 = size 50% 50%,title:^(Bitwarden)$
+windowrulev2 = center,title:^(Bitwarden)$
 # +------------------------------------------+
 # |        Environment variables             |
 # +------------------------------------------+
